@@ -457,6 +457,7 @@ $specialPageAliases = array(
 	'Tags'                      => array( 'Tags' ),
 	'Activeusers'               => array( 'ActiveUsers' ),
 	'RevisionMove'              => array( 'RevisionMove' ),
+	'ComparePages'              => array( 'ComparePages' ),
 );
 
 /**
@@ -4285,6 +4286,15 @@ Enter the filename without the "{{ns:file}}:" prefix.',
 'tags-hitcount-header'    => 'Tagged changes',
 'tags-edit'               => 'edit',
 'tags-hitcount'           => '$1 {{PLURAL:$1|change|changes}}',
+
+# Special:ComparePAges
+'comparepages'      => 'Compare pages',
+'compare-selector'  => 'Compare page revisions',
+'compare-page1'     => 'Page 1',
+'compare-page2'     => 'Page 2',
+'compare-rev1'      => 'Revision 1',
+'compare-rev2'      => 'Revision 2',
+'compare-submit'    => 'Compare',
 
 # Database error messages
 'dberr-header'      => 'This wiki has a problem',
